--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
+    "glob": "^11.0.0",
     "jsvectormap": "^1.5.3",
     "next": "^15.1.2",
     "react": "^19.0.0",
@@ -18,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,7 +28,7 @@
     "@types/react-dom": "^18",
     "@types/react-table": "^7.7.19",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
+    "eslint": "^9.17.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.49",
     "prettier": "^3.2.5",
