--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "clean": "rimraf .next"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "apexcharts": "^3.45.2",
     "flatpickr": "^4.6.13",
     "glob": "^11.0.0",
