--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.9",
     "flatpickr": "^4.6.13",
     "glob": "^11.0.0",
     "jsvectormap": "^1.5.3",
